--- a/harnesses/scheme/Dockerfile
+++ b/harnesses/scheme/Dockerfile
@@ -1,4 +1,5 @@
 FROM ubuntu:24.04
 LABEL authors="The Randalorian"
 RUN apt-get update -q -y && \
-    apt-get install -q -y install mit-scheme
+    apt-get install -q -y mit-scheme && \
+    rm -rf /var/lib/apt/lists/*
