--- a/.github/workflows/build_dev_containers.yml
+++ b/.github/workflows/build_dev_containers.yml
@@ -69,8 +69,7 @@ jobs:
           context: .
           file: ./harnesses/clips/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: The-Randalorian/rando-ga-test-harness-clips:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
