--- a/.github/workflows/build_dev_containers.yml
+++ b/.github/workflows/build_dev_containers.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Build Test Harness Containers
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -68,14 +68,14 @@ jobs:
           context: .
           file: ./harnesses/clips/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/the-randalorian/rando-ga-test-harness-clips:latest
+          tags: ghcr.io/the-randalorian/rando-ga-test-harness-clips:latest, ghcr.io/the-randalorian/rando-ga-test-harness:clips-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Sign the published clips Docker image
         if: ${{ github.event_name != 'pull_request' }}
         env:
-          TAGS: ghcr.io/the-randalorian/rando-ga-test-harness-clips:latest
+          TAGS: ghcr.io/the-randalorian/rando-ga-test-harness-clips:latest, ghcr.io/the-randalorian/rando-ga-test-harness:clips-latest
           DIGEST: ${{ steps.build-and-push-clips.outputs.digest }}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
@@ -124,14 +124,14 @@ jobs:
           context: .
           file: ./harnesses/clisp/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/the-randalorian/rando-ga-test-harness-clisp:latest
+          tags: ghcr.io/the-randalorian/rando-ga-test-harness-clisp:latest, ghcr.io/the-randalorian/rando-ga-test-harness:clisp-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Sign the published clisp Docker image
         if: ${{ github.event_name != 'pull_request' }}
         env:
-          TAGS: ghcr.io/the-randalorian/rando-ga-test-harness-clisp:latest
+          TAGS: ghcr.io/the-randalorian/rando-ga-test-harness-clisp:latest, ghcr.io/the-randalorian/rando-ga-test-harness:clisp-latest
           DIGEST: ${{ steps.build-and-push-clisp.outputs.digest }}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
@@ -180,14 +180,14 @@ jobs:
           context: .
           file: ./harnesses/prolog/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/the-randalorian/rando-ga-test-harness-prolog:latest
+          tags: ghcr.io/the-randalorian/rando-ga-test-harness-prolog:latest, ghcr.io/the-randalorian/rando-ga-test-harness:prolog-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Sign the published prolog Docker image
         if: ${{ github.event_name != 'pull_request' }}
         env:
-          TAGS: ghcr.io/the-randalorian/rando-ga-test-harness-prolog:latest
+          TAGS: ghcr.io/the-randalorian/rando-ga-test-harness-prolog:latest, ghcr.io/the-randalorian/rando-ga-test-harness:prolog-latest
           DIGEST: ${{ steps.build-and-push-prolog.outputs.digest }}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
@@ -236,13 +236,13 @@ jobs:
           context: .
           file: ./harnesses/scheme/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ghcr.io/the-randalorian/rando-ga-test-harness-scheme:latest
+          tags: ghcr.io/the-randalorian/rando-ga-test-harness-scheme:latest, ghcr.io/the-randalorian/rando-ga-test-harness:scheme-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
       - name: Sign the published scheme Docker image
         if: ${{ github.event_name != 'pull_request' }}
         env:
-          TAGS: ghcr.io/the-randalorian/rando-ga-test-harness-scheme:latest
+          TAGS: ghcr.io/the-randalorian/rando-ga-test-harness-scheme:latest, ghcr.io/the-randalorian/rando-ga-test-harness:scheme-latest
           DIGEST: ${{ steps.build-and-push-scheme.outputs.digest }}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
