--- a/harnesses/clips/Dockerfile
+++ b/harnesses/clips/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:24.04
 LABEL authors="The Randalorian"
 RUN apt-get update -q -y && \
-    apt-get install -q -y clisp && \
+    apt-get install -q -y clips && \
     rm -rf /var/lib/apt/lists/*
