Fix lisp digest

--- a/.github/workflows/build_dev_containers.yml
+++ b/.github/workflows/build_dev_containers.yml
@@ -132,6 +132,7 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         env:
           TAGS: ghcr.io/the-randalorian/rando-ga-test-harness-lisp:latest
+          DIGEST: ${{ steps.build-and-push-lisp.outputs.digest }}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
 
   build-prolog:
