Add run harnesses (3 empty, 1 real)

--- a/harnesses/lisp/Dockerfile
+++ b/harnesses/lisp/Dockerfile
@@ -1,5 +1,9 @@
 FROM ubuntu:24.04
 LABEL authors="The Randalorian"
+WORKDIR /home/ubuntu
+COPY run-harness.py /home/ubuntu/
+RUN chmod 544 /home/ubuntu/run-harness.py
 RUN apt-get update -q -y && \
-    apt-get install -q -y clisp && \
+    apt-get install -q -y python3 clisp && \
     rm -rf /var/lib/apt/lists/*
+CMD /home/ubuntu/run-harness.py
