Avoid running as root in container

--- a/harnesses/prolog/Dockerfile
+++ b/harnesses/prolog/Dockerfile
@@ -1,9 +1,15 @@
 FROM ubuntu:24.04
 LABEL authors="The Randalorian"
-WORKDIR /home/ubuntu
-COPY run-harness.py /home/ubuntu/
-RUN chmod 544 /home/ubuntu/run-harness.py
+ARG UID=696
+ARG GID=696
+
+COPY run-harness.py /usr/local/bin
+RUN chmod 555 /usr/local/bin/run-harness.py
 RUN apt-get update -q -y && \
     apt-get install -q -y python3 swi-prolog && \
     rm -rf /var/lib/apt/lists/*
-CMD /home/ubuntu/run-harness.py
+RUN groupadd  --gid $GID nonroot && \
+    useradd --uid $UID --gid $GID nonroot
+WORKDIR /home/nonroot
+USER nonroot
+CMD /usr/local/bin/run-harness.py
